--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "material-tailwind-kit-react",
   "version": "1.1.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/material-tailwind-kit-react/#/",
+  "homepage": "ftp.seitgdl.com.mx",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-tailwind/react": "^0.3.4",
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
